# simple-wasm-ga

./: .firebaserc  .gitignore  firebase.json  package-lock.json  package.json  tailwind.config.js
crate/: Cargo.toml
crate/src/: lib.rs
src/: SimulationDisplay.ts  index.d.ts  index.html  index.ts  styles.scss
