[package]
authors = ["Alex Eales"]
categories = ["wasm"]
description = "Simple genetic Algorithm Sim using Rust and WASM"
license = "Apache-2.0/MIT"
name = "simple-wasm-ga"
readme = "./README.md"
repository = "https://github.com/AlexEales/simple-wasm-ga"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.7.2", features = ["wasm-bindgen"] }
cfg-if = "0.1.5"
wasm-bindgen = "0.2.29"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

[features]
default = ["console_error_panic_hook"]
